<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NameTextBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/b1"
        tools:layout_editor_absoluteX="-22dp"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:background="@drawable/baseline_logout_24"
        tools:layout_editor_absoluteX="348dp"
        tools:layout_editor_absoluteY="53dp"
        tools:ignore="MissingConstraints">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:background="@drawable/baseline_arrow_back_24"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="52dp"
        tools:ignore="MissingConstraints">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_side_bg"
        tools:layout_editor_absoluteX="401dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="411dp"
        android:layout_height="68dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:background="@drawable/baseline_home_24"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="14dp"
            tools:ignore="MissingConstraints">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="32dp"
            android:layout_height="9dp"
            android:fontFamily="@font/default_font"
            android:text="@string/discover"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="8sp"
            tools:layout_editor_absoluteX="233dp"
            tools:layout_editor_absoluteY="52dp"
            tools:ignore="MissingConstraints,SmallSp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="20dp"
            android:layout_height="9dp"
            android:fontFamily="@font/default_font"
            android:text="@string/more"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="8sp"
            tools:layout_editor_absoluteX="343dp"
            tools:layout_editor_absoluteY="52dp"
            tools:ignore="MissingConstraints,SmallSp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="27dp"
            android:layout_height="10dp"
            android:fontFamily="@font/default_font"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="8sp"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="52dp"
            tools:ignore="MissingConstraints,SmallSp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="23dp"
            android:layout_height="10dp"
            android:fontFamily="@font/default_font"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="8sp"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="52dp"
            tools:ignore="MissingConstraints,SmallSp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:background="@drawable/baseline_account_profile_24"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="13dp"
            tools:ignore="MissingConstraints">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:background="@drawable/baseline_discover_24"
            tools:layout_editor_absoluteX="231dp"
            tools:layout_editor_absoluteY="13dp"
            tools:ignore="MissingConstraints">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:background="@drawable/baseline_more_24"
            tools:layout_editor_absoluteX="334dp"
            tools:layout_editor_absoluteY="13dp"
            tools:ignore="MissingConstraints">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="333dp"
        android:layout_height="153dp"
        android:background="@drawable/box_card"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="114dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="96dp"
            android:layout_height="91dp"
            android:background="@drawable/me"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="58dp"
            android:layout_height="26dp"
            android:fontFamily="@font/default_font"
            android:text="@string/sasi"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="115dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="89dp"
            android:layout_height="97dp"
            android:background="@drawable/boxcard_purple"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="28dp" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/star"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="31dp"
                android:layout_height="42dp"
                android:fontFamily="@font/default_font"
                android:text="37"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="18dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="71dp"
                android:layout_height="23dp"
                android:background="@drawable/boxcard_white"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="68dp" >

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="57dp"
                    android:layout_height="20dp"
                    android:fontFamily="@font/default_font"
                    android:text="Reedem"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="7dp"
                    tools:layout_editor_absoluteY="1dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="89dp"
            android:layout_height="97dp"
            android:background="@drawable/boxcard_purple"
            tools:layout_editor_absoluteX="228dp"
            tools:layout_editor_absoluteY="28dp" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/trophy"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="31dp"
                android:layout_height="42dp"
                android:fontFamily="@font/default_font"
                android:text="18"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="18dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="71dp"
                android:layout_height="23dp"
                android:background="@drawable/boxcard_white"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="68dp" >

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="39dp"
                    android:layout_height="19dp"
                    android:fontFamily="@font/default_font"
                    android:text="Rank"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="2dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="306dp"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/Bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider6"
        android:layout_width="306dp"
        android:layout_height="1dp"
        android:layout_marginBottom="56dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bio" />

    <View
        android:id="@+id/divider3"
        android:layout_width="306dp"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="306dp"
        android:layout_height="35dp"
        android:text="@string/sasidharan"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="334dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/PhoneNo"
        android:layout_width="306dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        android:text="@string/_9245547046"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="306dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:text="@string/alterego_gmail_com"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNo" />

    <TextView
        android:id="@+id/Bio"
        android:layout_width="306dp"
        android:layout_height="103dp"
        android:layout_marginTop="36dp"
        android:text="@string/update_in_progress"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <View
        android:id="@+id/divider"
        android:layout_width="306dp"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/PhoneNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/phone"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/PhoneNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/bio"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:text="Name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
